--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="parent">
       <div class="child">
         <header>
-          <h1>This is translator</h1>
+          <h1>This is a translator</h1>
         </header>
         <br>
         <div class="A">
